cmake_minimum_required(VERSION 3.30)
project(NetInfoD VERSION 0.0.1 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

add_executable(NetInfoDaemon src/main.cpp src/FileReader.cpp src/GetMemoryInfo.cpp src/GetVersionInfo.cpp src/GetUptimeInfo.cpp src/Socket.cpp src/BindSocket.cpp src/ListenSocket.cpp)